# Trust-Bench-SecureEval-Ops

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  ATHENA_RESOLUTION_SUMMARY.md  CHANGELOG.md  Dockerfile  FALLBACK_CONFIG.md  MCP_SERVER_RESOLUTION.md  MIGRATION_NOTES.md  PROJECT_PLAN.md  QUICK_FALLBACK.md  README.md  README.txt  README_GAP_PLAN.md  READMEv2.2.md  SYSTEM_LOGS_ANALYSIS.md  TRUSTBENCH_VISION.md  calibrate_thresholds.py  check_status.ps1  coverage.xml  docker-compose.yml  job_processor_demo.py  mcp_http_server.py  mcp_server_stub.py  pyproject.toml  quick_start.bat  requirements-phase1.txt  requirements.txt  run_eval_direct.py  run_eval_fallback.py  run_full_eval.py  run_real_eval.py  start_auto.bat  start_backend.bat  start_backend.ps1  start_frontend.bat  start_services.py  start_simple.ps1  start_trust_bench.bat  (+9 more)
Project2v2/: .env  .env.example  .env_example  COLLABORATION_SUMMARY.md  FIXED_README.md  (+24 more)
trustbench_groq_starter/: Makefile  README.md  pyproject.toml
trustbench_groq_starter/.github/workflows/: eval.yml
trustbench_groq_starter/datasets/golden/: example.jsonl
trustbench_groq_starter/profiles/: default.yaml
trustbench_groq_starter/studio_app/: app.py
trustbench_groq_starter/trustbench_core/: orchestrator.py
trustbench_groq_starter/trustbench_core/agents/: ethics_refusal.py  security_eval.py  system_perf.py  task_fidelity.py
trustbench_groq_starter/trustbench_core/providers/: groq_provider.py
trustbench_groq_starter/trustbench_core/reports/: writer.py
trustbench_groq_starter/trustbench_core/tools/: mcp_client.py
(+326 files in other folders)
