[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-bench"
version = "0.1.0"
description = "Trust_Bench evaluation and tooling suite"
readme = "README.md"
authors = [{name = "Trust_Bench Team"}]
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["trustbench_core*", "trustbench_groq_starter*", "trust_bench_mcp*", "trust_bench_workspace*"]
